k8s/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: yotta-saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      nodeSelector:
        "nvidia.com/gpu": "false"
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
      containers:
        - name: synapse
          image: $ECR_REGISTRY/synapse:$IMAGE_TAG
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8002
              name: http
            - containerPort: 50051
              name: grpc
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
  namespace: yotta-saas
spec:
  type: ClusterIP
  selector:
    app: synapse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-grpc-service
  namespace: yotta-saas
spec:
  # bypass kube-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 50051
      name: grpc
  clusterIP: None
  selector:
    app: synapse
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  namespace: yotta-saas
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:225989363927:certificate/049acca8-132f-439b-b92e-70e6acacdc9c"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/health"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-grpc-ingress
  namespace: yotta-saas
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: "GRPC"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-2:225989363927:certificate/ada5a806-d246-4778-a1f2-1c222e6aa6f2"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/health"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse-grpc-service
                port:
                  number: 8080
